--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,8 +1,25 @@
+.header-wrapper {
+  position: fixed;
+  position: -webkit-sticky;
+  top: 0;
+  width: 100%;
+  z-index: 1000;
+}
+
+.chips {
+  display: flex;
+  height: 30px;
+  align-items: center;
+  background: white;
+  padding: 5px;
+  width: 100%;
+}
+
+.mat-chip-list-wrapper {
+  margin-top: 5px!important;
+}
+
 .app-toolbar {
-  position: sticky;
-  position: -webkit-sticky; /* For macOS/iOS Safari */
-  top: 0; /* Sets the sticky toolbar to be on top */
-  z-index: 1000; /* Ensure that your app's content doesn't overlap the toolbar */
   display: flex;
   justify-content: space-between;
 }
@@ -14,4 +31,9 @@
 
 .mat-select-value-text {
   color: #ffff!important;
+}
+
+.header-actions {
+  display: flex;
+  align-items: center;
 }
