--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,16 +1,46 @@
-<mat-toolbar color="primary" class="app-toolbar">
-  <span>Pokemon Lib <3</span>
-  <mat-paginator
-    [length]='(paginator$ |async)?.itemsCount'
-    [pageSize]="10"
-    [pageSizeOptions]="[10, 50, 100]"
-    (page)="onChangePaginator($event)"
-    aria-label="Select page"
-    class="paginator"
-  >
-  </mat-paginator>
-</mat-toolbar>
+<div class="header-wrapper">
+  <mat-toolbar color="primary" class="app-toolbar">
+    <span>Pokemon Lib <3</span>
+    <div class="header-actions">
+      <mat-paginator
+        [length]='(paginator$ |async)?.itemsCount'
+        [pageSize]="10"
+        [pageSizeOptions]="[10, 50, 100]"
+        (page)="onChangePaginator($event)"
+        aria-label="Select page"
+        class="paginator"
+      >
+      </mat-paginator>
+    </div>
+  </mat-toolbar>
+  <mat-chip-list aria-label="Fish selection" >
+    <div class="chips">
+      <mat-chip
+        *ngFor="let type of pokeService.types | async"
+        (removed)="pokeService.removeType(type)"
+      >
+        {{type}}
+        <button matChipRemove>
+          <mat-icon>cancel</mat-icon>
+        </button>
+      </mat-chip>
+      <input
+        #typeInput
+        matInput
+        placeholder="New fruit..."
+        [formControl]="pokeCtrl"
+        [matAutocomplete]="auto"
+      >
+    </div>
+  </mat-chip-list>
+</div>
 <div>
   <app-pokemons></app-pokemons>
 </div>
+
+<mat-autocomplete #auto="matAutocomplete" (optionSelected)="selected($event)">
+  <mat-option *ngFor="let type of pokeService.allTypes" [value]="type">
+    {{type}}
+  </mat-option>
+</mat-autocomplete>
 
