--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -37,3 +37,16 @@
   display: flex;
   align-items: center;
 }
+
+.navigation {
+  color: #ffff;
+}
+
+.navigation > a {
+  margin: 10px;
+}
+
+a {
+  color: #ffff;
+  text-decoration: none;
+}
